@@ -1,3 +1,6 @@
+Sep 01, 2016 - chris ---------------------------------------------------
+o Fixed compiler error related to inline assembly on gcc 4.8.x
+
 Jun 29, 2016 - chris ---------------------------------------------------
 o issue #80: fixed streamvbyte compilation for c++11
 
